Complete CSS assignment

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,16 @@
  h1 {
    color: red;
  }
+
+.social-btn {
+  position: static;
+  border: solid;
+  margin: 25px;
+  padding: 25px;
+  height: 70px;
+  background: #d9534f;
+  text-align: center;
+  font-size: 15px;
+  color: white;
+}
+
