--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,14 @@
 <h1>About Bloccit</h1>
-<p>Created by: Me</p>
+<p>Created by: Liz</p>
+
+<address>
+  <strong>Liz G.</strong><br>
+  Somewhere in the Chi<br>
+  Windy City, IL 60608<br>
+  <abbr title="Phone">P:</abbr> (123) 456-7890
+</address>
+
+<address>
+  <strong>Liz Green</strong><br>
+  <a href="mailto:#">liz.green@123.io</a>
+</address>
