--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Welcome to Bloccit</h1>
-<p>This is the home page for Bloccit.</p>
+<h1 class="text-center">Welcome to Bloccit</h1>
+  <br>
+  <p class="text-center">This is the home page for Liz's Bloccit.</p>
+  <br>
+  <br>
+    <div style="text-align:center">
+      <%= link_to "Follow me", "http://www.facebook.com/liz.verde2", class: "social-btn" %>
+    </div>
+
