--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,24 @@
-<h1 class="text-center">Welcome to Bloccit</h1>
-  <br>
-  <p class="text-center">This is the home page for Liz's Bloccit.</p>
-  <br>
-  <br>
-    <div style="text-align:center">
-      <%= link_to "Follow me", "http://www.facebook.com/liz.verde2", class: "social-btn" %>
-    </div>
+<br>
+<div class="jumbotron">
+  <h1>Bloccit</h1>
+  <p>Bloccit is a resource for sharing links with your friends!</p>
+  <p>
+      <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
+      <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
+  </p>
+</div>
 
+<div class="row">
+  <div class="col-md-4">
+    <h2>Solves world hunger</h2>
+    <p>Bloccit will deliver food and water to those in need, all over the world.</p>
+  </div>
+  <div class="col-md-4">
+    <h2>Eliminates poverty</h2>
+    <p>Bloccit will deliver money and education to those in need, all over the world.</p>
+  </div>
+  <div class="col-md-4">
+    <h2>Makes you better looking</h2>
+    <p>Bloccit will make you better looking: it's scientifically proven to make men look like Ryan Gosling and women look like Shakira.</p>
+  </div>
+</div>
