--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,6 +10,9 @@
     <p><%= markdown_to_html @post.body %></p>
   </div>
   <div class="col-md-4">
+    <small>
+       <%= image_tag(@post.image.tiny.url) if @post.image? %>
+     </small>
     <% if policy(@post).edit? %>
     <%= link_to "Edit", edit_topic_post_path(@topic, @post), class: 'btn btn-success' %>
     <% end %>
