--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -9,6 +9,7 @@
     <p class="lead"><%= @topic.description %></p>
     <% @posts.each do |post| %>
     <div class="media">
+      <%= image_tag(post.image.tiny.url) if post.image? %>
       <div class="media-body">
       <h4 class="media-heading">
         <%= link_to (markdown_to_html post.title), [@topic, post] %>
@@ -24,8 +25,8 @@
   <% end %>
 </div>
 <div class="col-md-4">
-  <% if policy(Post.new).create? %>
-  <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %>
+    <% if policy(Post.new).create? %>
+    <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %>
   <% end %>
 </div>
 </div>
