--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,6 +8,8 @@
        <%= @post.user.name %>
      </small>
     <p><%= markdown_to_html @post.body %></p>
+    <%= render 'comments/comment' %>
+    <%= render partial: 'comments/form', locals: {topic: @topic, post: @post, comment: @comment} %>
   </div>
   <div class="col-md-4">
     <small>
@@ -16,3 +18,5 @@
     <% if policy(@post).edit? %>
     <%= link_to "Edit", edit_topic_post_path(@topic, @post), class: 'btn btn-success' %>
     <% end %>
+  </div>
+</div>
