Fixed image tag

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -2,7 +2,7 @@
   <% @post.comments.each do |comment| %>
   <div class="media-left">
     <a href="#">
-      <img class="media-object" src="comment.user.avatar.tiny.url"> <!-- Render the comments user's avatar here (similar to how we did it with posts) -->
+      <%= image_tag comment.user.avatar.tiny.url, class: 'media-object' %>
     </a>
   </div>
   <div class="media-body">
