--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,4 @@
 <h1><%= markdown_to_html @post.title %></h1>
-
 <div class="row">
   <div class="col-md-8">
     <small>
@@ -8,8 +7,10 @@
        <%= @post.user.name %>
      </small>
     <p><%= markdown_to_html @post.body %></p>
+    <% if policy(Comment).create? %>
     <%= render 'comments/comment' %>
     <%= render partial: 'comments/form', locals: {topic: @topic, post: @post, comment: @comment} %>
+    <% end %>
   </div>
   <div class="col-md-4">
     <small>
