--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -8,8 +8,12 @@
   <div class="media-body">
     <h4 class="media-heading"><%= comment.user.name %></h4>
     <small>commented <%= time_ago_in_words(comment.created_at) %> ago by
-       <%= comment.user.name %></small>
-    <%= comment.body %>
+       <%= comment.user.name %>
+       <% if policy(comment).destroy? %>
+       | <%= link_to "Delete", [@topic, @post, comment], method: :delete %>
+     <% end %>
+    </small>
+    <p><%= comment.body %></p>
+    <% end %>
   </div>
- <% end %>
 </div>
