--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<div class="media">
+<%= content_tag :div, class: 'media', id: "comment-#{comment.id}" do %>
   <% @post.comments.each do |comment| %>
   <div class="media-left">
     <a href="#">
@@ -16,4 +16,4 @@
     <p><%= comment.body %></p>
     <% end %>
   </div>
-</div>
+<% end %>
