--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,4 @@
 <%= content_tag :div, class: 'media', id: "comment-#{comment.id}" do %>
-  <% @post.comments %>
   <div class="media-left">
     <a href="#">
       <%= image_tag comment.user.avatar.tiny.url, class: 'media-object' %>
@@ -10,7 +9,7 @@
     <small>commented <%= time_ago_in_words(comment.created_at) %> ago by
        <%= comment.user.name %>
        <% if policy(comment).destroy? %>
-       | <%= link_to "Delete", [@post, comment], method: :delete %>
+       | <%= link_to "Delete", [comment.post, comment], method: :delete %>
      <% end %>
     </small>
     <p><%= comment.body %></p>
