--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -9,7 +9,7 @@
     <small>commented <%= time_ago_in_words(comment.created_at) %> ago by
        <%= comment.user.name %>
        <% if policy(comment).destroy? %>
-       | <%= link_to "Delete", [comment.post, comment], method: :delete %>
+       | <%= link_to "Delete", [comment.post, comment], method: :delete, remote: true %>
      <% end %>
     </small>
     <p><%= comment.body %></p>
