--- a/app/views/topics/posts/show.html.erb
+++ b/app/views/topics/posts/show.html.erb
@@ -8,9 +8,9 @@
        <%= @post.user.name %>
      </small>
     <p><%= markdown_to_html @post.body %></p>
-    <% if policy(Comment).create? %>
+    <h2>Comments</h2>
     <%= render partial: 'comments/comment', collection: @comments %>
-    <% end %>
+    <%= render partial: 'comments/form' %>
   </div>
   <div class="col-md-4">
     <small>
