Creating with Ajax Checkpoint Complete

--- a/app/views/topics/posts/show.html.erb
+++ b/app/views/topics/posts/show.html.erb
@@ -9,8 +9,12 @@
      </small>
     <p><%= markdown_to_html @post.body %></p>
     <h2>Comments</h2>
+    <div class='js-comments'> 
     <%= render partial: 'comments/comment', collection: @comments %>
-    <%= render partial: 'comments/form' %>
+    </div>
+    <div class='new-comment'>
+    <%= render 'comments/form' %>
+    </div>
   </div>
   <div class="col-md-4">
     <small>
