--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-8">
-    <%= form_for [@post, @comment] do |f| -%>
+    <%= form_for [@post, @post.comments.build], remote: true do |f| %>
       <%= form_group_tag(@comment.errors[:body]) do %>
         <%= f.label :body %>
         <%= f.text_field :body, class: 'form-control', placeholder: "Enter comment body" %>
