--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,7 +1,7 @@
 <%= content_tag :div, class: 'media', id: "comment-#{comment.id}" do %>
   <div class="media-left">
     <a href="#">
-      <%= image_tag comment.user.avatar.tiny.url, class: 'media-object' %>
+      <%= image_tag (comment.user.avatar.tiny.url) if comment.user.avatar? %>
     </a>
   </div>
   <div class="media-body">
