--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,9 +3,9 @@
 <head>
   <title>Bloccit</title>
    <meta name="viewport" content="width=device-width, initial-scale=1">
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
+   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+   <%= csrf_meta_tags %>
 </head>
 <body>
   <div class="container">
@@ -26,17 +26,14 @@
         <a class="nav-link" href="/users">Users</a>
       </li>
 
-      <div class="pull-right user-info">
+      <div class="float-right user-info">
         <% if current_user %>
           <%= image_tag(current_user.avatar.tiny.url) if current_user.avatar? %>
              Hello <%= link_to (current_user.name || current_user.email), current_user %>!
-             <%= link_to edit_user_registration_path, class: 'btn btn-primary btn-sm' do %>
-             <span class="glyphicon glyphicon-user"></span>
-          <% end %>
-
-          <%= link_to destroy_user_session_path, method: :delete, class: 'btn btn-primary btn-sm' do %>
-              <span class="glyphicon glyphicon-log-out"></span>
-            <% end %>
+              <%= link_to edit_user_registration_path, class: 'btn btn-primary btn-sm' do %>
+              <% end %>
+              <%= link_to destroy_user_session_path, method: :delete, class: 'btn btn-primary btn-sm' do %>
+              <% end %>
            <% else %>
              <%= link_to "Sign In", new_user_session_path %> or
              <%= link_to "Sign Up", new_user_registration_path %>
